@@ -2,8 +2,9 @@
 ; By Nils M Holm, 2009
 ; See the LICENSE file of the S9fES package for terms of use
 ;
-; (define-match symbol clause ...)  ==>  procedure
-; (ml-match name program ...)       ==>  procedure
+; (define-matcher symbol clause ...)                ==>  procedure
+; (let-matcher symbol (clause ...) expression ...)  ==>  procedure
+; (ml-match name program ...)                       ==>  procedure
 ;
 ; These constructs allow to write programs using pattern matching
 ; style. Each program is a set of clauses containing a pattern in
@@ -14,9 +15,9 @@
 ; The symbol _ matches any object without binding to it.
 ;
 ; A procedure resembling LENGTH may be written in this way using
-; DEFINE-MATCH:
+; DEFINE-MATCHER:
 ;
-; (define-match len
+; (define-matcher len
 ;   ((())      0)               ; The empty list has a length of 0.
 ;   (((_ . x)) (+ 1 (len x))))  ; A list whose car part does not
 ;                               ; matter and whose cdr part is X
@@ -32,20 +33,52 @@
 ; (It uses : instead of | to separate cases, because | is not
 ;  a valid Scheme symbol.)
 ;
-; Example:   (begin
+; The following more elaborate example implements a subset of
+; ML-MATCH by using pattern matching itself. The only difference
+; to ML-MATCH is that it does not allow multiple expressions in
+; bodies:
+;
+; (define-macro (simple-match name . clauses)
+;   (let-match next-clause
+;     (((out ())
+;        (reverse out))
+;      ((out (pattern '= expr ': . clauses))
+;        (next-clause `((,pattern ,expr) ,@out) clauses))
+;      ((out (pattern '= expr))
+;        (next-clause `((,pattern ,expr) ,@out) ())))
+;     `(define ,name
+;        ,(apply match name (next-clause '() clauses)))))
+;
+; SIMPLE-MATCH works in the same way as ML-MATCH. Here is a
+; function resembling APPEND using SIMPLE-MATCH:
+;
+; (simple-match
+;   appnd (() x)      = x
+;       : ((h . t) x) = (cons h (appnd t x)))
+;
+; Example:   (let-matcher fac
+;              (((x)   (fac x 1))
+;               ((0 r) r)
+;               ((x r) (fac (- x 1) (* x r))))
+;              (fac 10))
+;                                          ==>  3628800
+;            (begin
 ;              (ml-match
 ;                appnd (() x)      = x
 ;                    : ((h . t) x) = (cons h (appnd t x)))
 ;              (appnd '(a b c) '(d e f)))
 ;                                          ==>  (a b c d e f)
 
+
 (define (match name . clauses)
 
   (define *accessors* '())
 
+  (define *args* 'args)
+
   (define (make-accessor path)
     (if (null? path)
-        'id
+        '(lambda (x) x)
         (let ((a (string->symbol
                    (string-append
                      "c"
@@ -56,19 +89,23 @@
           a)))
 
   (define (match-object type-pred eqv-pred accessor pattern)
-    `((let ((tmp (,(make-accessor accessor) args)))
+    `((let ((tmp (,(make-accessor accessor) ,*args*)))
         (and (,type-pred tmp)
              (,eqv-pred tmp ,pattern)))))
 
   (define (make-matcher pattern accessor)
-    (cond ((pair? pattern)
+    (cond ((and (pair? pattern)
+                (eq? 'quote (car pattern)))
+             (match-object 'symbol? 'eq? accessor pattern))
+          ((pair? pattern)
             (let loop ((p pattern)
                        (a accessor)
                        (r '()))
               (cond ((pair? p)
                       (loop (cdr p)
                             (cons 'd a)
-                            (cons (append `((pair? (,(make-accessor a) args)))
+                            (cons (append `((pair? (,(make-accessor a)
+                                                      ,*args*)))
                                           (make-matcher (car p)
                                                         (cons 'a a)))
                                   r)))
@@ -81,7 +118,7 @@
             (cond ((symbol? pattern)
                     `())
                   ((null? pattern)
-                    `((null? (,(make-accessor accessor) args))))
+                    `((null? (,(make-accessor accessor) ,*args*))))
                   ((number? pattern)
                     (match-object 'number? '= accessor pattern))
                   ((boolean? pattern)
@@ -99,7 +136,10 @@
             (let loop ((p pattern)
                        (a accessor)
                        (r '()))
-              (cond ((pair? p)
+              (cond ((and (pair? p)
+                          (eq? 'quote (car p)))
+                      (apply append (reverse r)))
+                    ((pair? p)
                       (loop (cdr p)
                             (cons 'd a)
                             (cons (fetch-variables (car p) (cons 'a a))
@@ -108,7 +148,7 @@
                       (apply append (reverse r)))
                     (else
                       (loop '() a (cons (fetch-variables p a)
-                                         r))))))
+                                        r))))))
           (else
             (if (and (symbol? pattern) (not (eq? '_ pattern)))
                 `(,(cons pattern (make-accessor accessor)))
@@ -118,7 +158,7 @@
     (let* ((matcher (make-matcher pattern '()))
            (env     (fetch-variables pattern '()))
            (vars    (map car env))
-           (args    (map (lambda (x) `(,(cdr x) args))
+           (args    (map (lambda (x) `(,(cdr x) ,*args*))
                          env)))
       `((and ,@matcher)
                ((lambda ,vars ,@body) ,@args))))
@@ -147,17 +187,20 @@
           '())))
 
   (set! *accessors* '())
+  (set! *args* (gensym))
   (let* ((clauses   (map (lambda (x)
                            (make-case (car x) (cdr x)))
                          clauses))
          (acc-defs  (apply append (map def-accessor *accessors*))))
-    `(lambda args
-       (letrec ((id (lambda (x) x))
-               ,@acc-defs)
+    `(lambda ,*args*
+       (letrec (,@acc-defs)
          (cond ,@clauses
-               (else (wrong "unmatched pattern" (cons ',name args))))))))
+               (else (wrong "unmatched pattern" (cons ',name ,*args*))))))))
 
-(define-macro (define-match name . clauses)
+(define-macro (let-matcher name clauses . body)
+  `(letrec ((,name ,(apply match name clauses))) ,@body))
+
+(define-macro (define-matcher name . clauses)
   `(define ,name ,(apply match name clauses)))
 
 (define-macro (ml-match name . clauses)
