@@ -1,5 +1,16 @@
 Change Log
 
+2009-05-22
+	Moved "define-match.scm" to "matcher.scm".
+	Renamed DEFINE-MATCH to DEFINE-MATCHER, added LET-MATCHER syntax
+	to matcher package. Extended matchers so that 'SYMBOL matches a
+	literal symbol. (lib/matcher.scm)
+	Improved rendering of (cond (p => x)) in pretty printer.
+	(contrib/pretty-print.scm)
+	Applied various cosmetics.
+2009-05-21
+	Added STRING-UPCASE and STRING-DOWNCASE procedures.
+	(lib/string-case.scm)
 2009-05-20
 	Simplified HASH-TABLE procedures. (lib/hash-table.scm)
 2009-05-17
